2012-12-12  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (apropos_command): Now static.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* breakpoint.c (dprintf_command): Now static.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (init.c): Declare initialize_all_files;
	don't include call-cmds.h.
	* call-cmds.h: Remove.
	* symtab.c: Don't include call-cmds.h.
	* top.c: Don't include call-cmds.h.  Declare
	initialize_all_files.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* symfile.c (list_overlays_command, map_overlay_command)
	(unmap_overlay_command): Now static.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (_initialize_cli_cmds): Remove "document",
	"define", "while", and "if" commands.
	* cli/cli-script.c (while_command, if_command, define_command)
	(document_command): Now static.
	(_initialize_cli_script): New function.
	* cli/cli-script.h (while_command, if_command, define_command)
	(document_command): Don't declare.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* cli/cli-cmds.c (_initialize_cli_cmds): New function.
	(init_cli_cmds): Move most code into new function.

2012-12-12  Tom Tromey  <tromey@redhat.com>

	* minsyms.c (lookup_solib_trampoline_symbol_by_pc): Now static.
	* minsyms.h (lookup_solib_trampoline_symbol_by_pc): Don't
	declare.

2012-12-18  Joel Brobecker  <brobecker@adacore.com>

	* defs.h (enum gdb_osabi): Add GDB_OSABI_LYNXOS178.
	* osabi.c (gdb_osabi_names): Add entry for GDB_OSABI_LYNXOS178.
	* xcoffread.c (xcoff_get_core_n_import_files): New function.
	(xcoff_get_n_import_files): New function.
	* xcoffread.h (xcoffread.h): Add declaration.
	* rs6000-aix-tdep.c: #include "xcoffread.h".
	(rs6000_aix_osabi_sniffer): Do not return GDB_OSABI_AIX for
	XCOFF executables that do not depend on any shared library.
	* rs6000-lynx178-tdep.c: New file.
	* configure.tgt: Add powerpc-*-lynx*178 handling.
	* Makefile.in (ALL_TARGET_OBS): Add rs6000-lynx178-tdep.o.
	(ALLDEPFILES): Add rs6000-lynx178-tdep.c.
