@@ -1,3 +1,11 @@
+2012-12-18  Tom Tromey  <tromey@redhat.com>
+
+	* infcmd.c (all_registers_info, nexti_command, stepi_command)
+	(continue_command, interrupt_target_command): Now static.
+	(registers_info): Remove declaration.
+	* inferior.h (all_registers_info, nexti_command, stepi_command)
+	(continue_command, interrupt_target_command): Don't declare.
+
 2012-12-12  Tom Tromey  <tromey@redhat.com>
 
 	* cli/cli-cmds.c (apropos_command): Now static.
